--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -28,6 +28,14 @@
     <div class="prospera-margin prsps-dist text-center container" style="overflow-x:auto;">
       <i class="fa fa-circle-o-notch fa-spin loading-spinner" data-url="{% url "home_saldos" %}"></i>
     </div>
+
+    <div class="exchanges prospera-margin text-center container">
+      <p>Os prospers podem ser negociados entre as pessoas (nós, sujeitos) diretamente P2P ou através de exchanges:</p>
+      <div class="bloco">
+        <p>Relação de exchanges que já negociam o token:</p>
+        <div><a href="#" target="_blank">BRASILIEX</a></div>
+      </div>
+    </div>
   </section>
 
   <section id="quem-somos" class="quemsomos-content">
@@ -42,8 +50,8 @@
       </div>
 
       <div class="text-container row">
-        <p class="prospera-margin col-md-6 text-justify">Esse novo modelo de organização distribuída, deve ser construído sob um novo conjunto de princípios, opostos aos da OIM, sob um novo paradigma que priorize também a eficácia e não só a eficiência, sem hierarquia e funções pré-definidas, sem processos decisórios e seletivos, sem patrimônio ou fundos comuns administrados por uma equipe ou grupo. Uma organização aberta e inclusiva, transparente e que segue um modelo exponencial e abundante, com foco na evolução bem como na sobrevivência, uma organização que prospera.</p>
-        <p class="prospera-margin col-md-6 text-justify">As novas tecnologias da informação e comunicação móvel, principalmente a Internet, tem atuado fortemente nessa equação e colocado as Organizações de Modelo Industrial (OMI) em cheque, uma vez que permitem modelos distribuídos de organização, mostrando que a facilidade de conexão e acesso a informações tem um efeito devastador nos custos de transação, permitindo que a busca direta ao mercado seja feita com maior eficiência, velocidade, e eficiência que aquela feita por meio de uma “Firma”3.</p>
+        <p class="prospera-margin col-md-6 text-justify">Prospera é uma organização aberta, inclusiva, transparente e que segue um modelo econômico exponencial e abundante. Não é empresa, ONG, instituto, cooperativa ou fundação. Não tem uma pessoa jurídica. Não é uma instituição de nenhuma natureza. Prospera é uma ambiente: pessoas desenvolvendo uma determinada cultura e interagindo em espaços físicos e virtuais. E nesse ambiente as pessoas empreendem, investem e trabalham desenvolvendo a cultura da abundância, sem nenhum procedimento de exclusão que diminua o campo de possibilidades: não tem processo seletivo, não tem decisão coletiva, não tem cargos ou funções, não tem caixa coletivo, não tem definição de orçamento ou metas, não tem planejamento, não tem um objetivo único. Qualquer pessoa é bem vinda para interagir livremente com as outras pessoas.</p>
+        <p class="prospera-margin col-md-6 text-justify">A livre interação acontece em comunidades de interesse: negociação de criptomoedas, venda de comidas artesanais, produção de cervejas, publicação de livros, comercialização de energia limpa e prestação de serviços via web são algumas delas. Nas comunidades, as pessoas criam objetos com o objetivo de gerar renda para elas mesmas. E quem cria o objeto define a regra de negócio. A receita dos objetos é das pessoas e não do ambiente, e essa percepção de abundância faz emergir o comportamento colaborativo. O propósito da Prospera é ser um ambiente que possibilite geração de recursos materiais necessários para a sobrevivência das pessoas sem comprometer a liberdade e a criatividade delas que, por sua vez, geram os recursos imateriais necessários para a sua evolução. Integrando sobrevivência e evolução, a Prospera gera prosperidade.</p>
       </div>
 
       <div class="companies-container row">
