--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -54,21 +54,9 @@
         <p class="prospera-margin col-md-6 text-justify">A livre interação acontece em comunidades de interesse: negociação de criptomoedas, venda de comidas artesanais, produção de cervejas, publicação de livros, comercialização de energia limpa e prestação de serviços via web são algumas delas. Nas comunidades, as pessoas criam objetos com o objetivo de gerar renda para elas mesmas. E quem cria o objeto define a regra de negócio. A receita dos objetos é das pessoas e não do ambiente, e essa percepção de abundância faz emergir o comportamento colaborativo. O propósito da Prospera é ser um ambiente que possibilite geração de recursos materiais necessários para a sobrevivência das pessoas sem comprometer a liberdade e a criatividade delas que, por sua vez, geram os recursos imateriais necessários para a sua evolução. Integrando sobrevivência e evolução, a Prospera gera prosperidade.</p>
       </div>
 
-      <div class="companies-container row">
-        <div class="col-md-2 col-md-offset-1 text-center">
-          <img src="{% static 'img/logo-criptotransfer.jpg' %}" alt="Criptotransfer">
-        </div>
-        <div class="col-md-2 text-center">
-          <img src="{% static 'img/logo-blockpub.jpg' %}" alt="Blockpub">
-        </div>
-        <div class="col-md-2 text-center">
-          <img src="{% static 'img/logo-blockchainrevolution.jpg' %}" alt="Blockchain Revolution">
-        </div>
-        <div class="col-md-2 text-center">
-          <img src="{% static 'img/logo-justvirtual.jpg' %}" alt="Just Virtual">
-        </div>
-        <div class="col-md-2 text-center">
-          <img src="{% static 'img/logo-pimpadas.jpg' %}" alt="Pimpadas">
+      <div class="companies-container text-center">
+        <div class="bloco">
+          <div><a href="{% url 'nos_list' %}">Veja nossas comunidades</a></div>
         </div>
       </div>
     </div>
