--- a/plataforma/templates/pages/nos_list.html
+++ b/plataforma/templates/pages/nos_list.html
@@ -13,7 +13,7 @@
       </div>
       <div class="col-md-8 col-lg-10 col-md-offset-1 col-lg-offset-0">
         <p class="text-justify">
-          Em 1937 o economista Ronald Coase publicou o artigo A Natureza da Firma: origem, evolução e desenvolvimento, onde afirma que as organizações surgem para atuar nos mercados com o objetivo de diminuir os custos de transação (custos de busca e aquisição, de contratação e controle, de coordenação e de confiança).
+          São grupos de interesse, aprendizagem e prática que se formam organicamente no sistema. Os sujeitos se agrupam por interesses comuns. E o objetivo da comunidade é ser um ambiente onde o sujeito gera receita para si por meio da criação e comercialização de objetos que estejam alinhados com os interesses da comunidade.
         </p>
       </div>
       <div class="inline-block hidden-sm hidden-xs">
