Trocando texto de Prospera

--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -23,7 +23,7 @@
       </div>
     </div>
 
-    <h3 class="text-center">Distribuição, Movimentação e Contribuição</h3>
+    <h3 class="text-center">Saldo em PRSP</h3>
 
     <div class="prospera-margin prsps-dist text-center container" style="overflow-x:auto;">
       <i class="fa fa-circle-o-notch fa-spin loading-spinner" data-url="{% url "home_saldos" %}"></i>
