--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -30,9 +30,10 @@
     </div>
 
     <div class="exchanges prospera-margin text-center container">
-      <p>Os prospers podem ser negociados entre as pessoas (nós, sujeitos) diretamente P2P ou através de exchanges:</p>
+      <p>Os prospers podem ser negociados entre as pessoas (nós, sujeitos) diretamente (P2P) ou através de exchanges:</p>
       <div class="bloco">
-        <p>Relação de exchanges que já negociam o token:</p>
+        <!-- <p>Relação de exchanges que já negociam o token:</p> -->
+        <p>A partir do <strong>dia 02 de agosto</strong>, o prosper já poderá ser negociado na <strong>bolsa da basiliex.</strong><br>Enquanto isso, faça o seu cadastro no link abaixo.</p>
         <div><a href="#" target="_blank">BRASILIEX</a></div>
       </div>
     </div>
