Adicionando link para Brasiliex

--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -34,7 +34,7 @@
       <div class="bloco">
         <!-- <p>Relação de exchanges que já negociam o token:</p> -->
         <p>A partir do <strong>dia 02 de agosto</strong>, o prosper já poderá ser negociado na <strong>bolsa da basiliex.</strong><br>Enquanto isso, faça o seu cadastro no link abaixo.</p>
-        <div><a href="#" target="_blank">BRASILIEX</a></div>
+        <div><a href="https://braziliex.com/exchange/login.php" target="_blank">BRASILIEX</a></div>
       </div>
     </div>
   </section>
