Trocando texto para landing page

--- a/plataforma/templates/pages/partial_landing_balance.html
+++ b/plataforma/templates/pages/partial_landing_balance.html
@@ -2,7 +2,7 @@
   <thead>
     <tr>
       <th>Nó</th>
-      <th>Quanto ganhou<br /> com a Prospera</th>
+      <th>Saldo em PRSP</th>
     </tr>
   </thead>
   <tbody>
