Escondendo bloco de vídeo

--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -42,20 +42,20 @@
   <section id="quem-somos" class="quemsomos-content">
     <h3 class="text-center">+ QUEM SOMOS +</h3>
     <div class="video-container container">
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <div class="embed-responsive embed-responsive-16by9">
             <iframe class="embed-responsive-item" src="//player.vimeo.com/video/118732545" ></iframe>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="text-container row">
-        <p class="prospera-margin col-md-6 text-justify">Prospera é uma organização aberta, inclusiva, transparente e que segue um modelo econômico exponencial e abundante. Não é empresa, ONG, instituto, cooperativa ou fundação. Não tem uma pessoa jurídica. Não é uma instituição de nenhuma natureza. Prospera é uma ambiente: pessoas desenvolvendo uma determinada cultura e interagindo em espaços físicos e virtuais. E nesse ambiente as pessoas empreendem, investem e trabalham desenvolvendo a cultura da abundância, sem nenhum procedimento de exclusão que diminua o campo de possibilidades: não tem processo seletivo, não tem decisão coletiva, não tem cargos ou funções, não tem caixa coletivo, não tem definição de orçamento ou metas, não tem planejamento, não tem um objetivo único. Qualquer pessoa é bem vinda para interagir livremente com as outras pessoas.</p>
-        <p class="prospera-margin col-md-6 text-justify">A livre interação acontece em comunidades de interesse: negociação de criptomoedas, venda de comidas artesanais, produção de cervejas, publicação de livros, comercialização de energia limpa e prestação de serviços via web são algumas delas. Nas comunidades, as pessoas criam objetos com o objetivo de gerar renda para elas mesmas. E quem cria o objeto define a regra de negócio. A receita dos objetos é das pessoas e não do ambiente, e essa percepção de abundância faz emergir o comportamento colaborativo. O propósito da Prospera é ser um ambiente que possibilite geração de recursos materiais necessários para a sobrevivência das pessoas sem comprometer a liberdade e a criatividade delas que, por sua vez, geram os recursos imateriais necessários para a sua evolução. Integrando sobrevivência e evolução, a Prospera gera prosperidade.</p>
+        <p class="col-md-6 text-justify">Prospera é uma organização aberta, inclusiva, transparente e que segue um modelo econômico exponencial e abundante. Não é empresa, ONG, instituto, cooperativa ou fundação. Não tem uma pessoa jurídica. Não é uma instituição de nenhuma natureza. Prospera é uma ambiente: pessoas desenvolvendo uma determinada cultura e interagindo em espaços físicos e virtuais. E nesse ambiente as pessoas empreendem, investem e trabalham desenvolvendo a cultura da abundância, sem nenhum procedimento de exclusão que diminua o campo de possibilidades: não tem processo seletivo, não tem decisão coletiva, não tem cargos ou funções, não tem caixa coletivo, não tem definição de orçamento ou metas, não tem planejamento, não tem um objetivo único. Qualquer pessoa é bem vinda para interagir livremente com as outras pessoas.</p>
+        <p class="col-md-6 text-justify">A livre interação acontece em comunidades de interesse: negociação de criptomoedas, venda de comidas artesanais, produção de cervejas, publicação de livros, comercialização de energia limpa e prestação de serviços via web são algumas delas. Nas comunidades, as pessoas criam objetos com o objetivo de gerar renda para elas mesmas. E quem cria o objeto define a regra de negócio. A receita dos objetos é das pessoas e não do ambiente, e essa percepção de abundância faz emergir o comportamento colaborativo. O propósito da Prospera é ser um ambiente que possibilite geração de recursos materiais necessários para a sobrevivência das pessoas sem comprometer a liberdade e a criatividade delas que, por sua vez, geram os recursos imateriais necessários para a sua evolução. Integrando sobrevivência e evolução, a Prospera gera prosperidade.</p>
       </div>
 
-      <div class="companies-container text-center">
+      <div class="companies-container text-center" style="margin-top: 50px;">
         <div class="bloco">
           <div><a href="{% url 'nos_list' %}">Veja nossas comunidades</a></div>
         </div>
