Faltou alteração de template

--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -56,9 +56,8 @@
       </div>
 
       <div class="companies-container text-center" style="margin-top: 50px;">
-        <div class="bloco">
-          <div><a href="{% url 'nos_list' %}">Veja nossas comunidades</a></div>
-        </div>
+        <a style="padding: 15px 128px;" href="{% static 'pdf/wtf_Prospera.pdf' %}" target="_blank" class="btn btn-prospera btn-lg" role="button">Saiba Mais</a>
+        <a href="{% url 'nos_list' %}" class="btn btn-prospera btn-lg" role="button">Veja nossas comunidades</a>
       </div>
     </div>
   </section>
