Adicionando scroll interno

--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -25,7 +25,7 @@
 
     <h3 class="text-center">Distribuição, Movimentação e Contribuição</h3>
 
-    <div class="prospera-margin prsps-dist text-center container" style="overflow-x:auto;">
+    <div class="prospera-margin prsps-dist text-center container" style="overflow-x:auto; height:530px; overflow-y: scroll;">
       <i class="fa fa-circle-o-notch fa-spin loading-spinner" data-url="{% url "home_saldos" %}"></i>
     </div>
 
