Adicionando links para qr-codes e trocando texto da landing

--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -57,7 +57,7 @@
 
       <div class="companies-container text-center" style="margin-top: 50px;">
         <a style="padding: 15px 128px;" href="{% static 'pdf/wtf_Prospera.pdf' %}" target="_blank" class="btn btn-prospera btn-lg" role="button">Saiba Mais</a>
-        <a href="{% url 'nos_list' %}" class="btn btn-prospera btn-lg" role="button">Veja nossas comunidades</a>
+        <a href="{% url 'nos_list' %}" class="btn btn-prospera btn-lg" role="button">Veja as comunidades</a>
       </div>
     </div>
   </section>
@@ -68,15 +68,15 @@
 
     <div class="row text-center">
       <div class="col-md-2 col-md-offset-3">
-        <h4><i class="fa fa-facebook" aria-hidden="true"></i> Página no Facebook:</h4>
+        <a href="https://www.facebook.com/8Prospera/" target="_blank"><h4><i class="fa fa-facebook" aria-hidden="true"></i> Página no Facebook</h4></a>
         <img class="qr-code" src="https://api.qrserver.com/v1/create-qr-code/?size=130x130&bgcolor=000000&color=ffffff&data=https://www.facebook.com/8Prospera/">
       </div>
       <div class="col-md-2">
-        <h4><i class="fa fa-facebook" aria-hidden="true"></i> Grupo no Facebook:</h4>
+        <a href="https://www.facebook.com/groups/laboriosa89/" target="_blank"><h4><i class="fa fa-facebook" aria-hidden="true"></i> Grupo no Facebook</h4></a>
         <img class="qr-code" src="https://api.qrserver.com/v1/create-qr-code/?size=130x130&bgcolor=000000&color=ffffff&data=https://www.facebook.com/groups/laboriosa89/">
       </div>
       <div class="col-md-2">
-        <h4><i class="fa fa-whatsapp" aria-hidden="true"></i> Grupo no Whatsapp:</h4>
+        <a href="https://chat.whatsapp.com/G0Ax9M0bmZE1EDPS5lJwTf" target="_blank"><h4><i class="fa fa-whatsapp" aria-hidden="true"></i> Grupo no Whatsapp</h4></a>
         <img class="qr-code" src="https://api.qrserver.com/v1/create-qr-code/?size=130x130&bgcolor=000000&color=ffffff&data=https://chat.whatsapp.com/G0Ax9M0bmZE1EDPS5lJwTf">
       </div>
 
