Adicionando campo de telefone no detalhes

--- a/plataforma/templates/pages/no_detail.html
+++ b/plataforma/templates/pages/no_detail.html
@@ -30,6 +30,9 @@
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
         <div class="quem-sou text-justify">{{ nodo.quem_sou|default:""|linebreaks }}</div>
+        {% if nodo.telefone %}
+        <div class="quem-sou text-justify"><p><i class="fa fa-whatsapp item-contato" aria-hidden="true"></i> {{ nodo.telefone }}</p></div>
+        {% endif %}
         {% if nodo.user == user %}
           <a href="{% url "no_update" %}" class="btn btn-prospera btn-edit" role="button">Editar</a>
         {% endif %}
