Adicionando link de zoom no header

--- a/plataforma/templates/base.html
+++ b/plataforma/templates/base.html
@@ -82,6 +82,7 @@
               <li><a class="scroll" href="{% url 'home' %}#quem-somos">Quem Somos</a></li>
               <li><a class="scroll" href="{% url 'nos_list' %}">Comunidades</a></li>
               <li><a class="scroll" href="{% url 'home' %}#contato">Contato</a></li>
+              <li><a class="scroll" href="https://zoom.us/j/7874523266" target="_blank">Zoom</a></li>
               {% if user.id %}
               <li>
                 <a href="#" class="scroll {% if user.nodo.imagem %}profile{% endif %}" id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
