Mudando nome pra Contato Whatsapp

--- a/plataforma/templates/pages/no_edit_form.html
+++ b/plataforma/templates/pages/no_edit_form.html
@@ -42,7 +42,7 @@
 
 
             <div class="form-group{% if form.telefone.errors %} has-error{% endif %}">
-              <label for="telefone">Telefone</label>
+              <label for="telefone">Contato WhatsApp</label>
               <input type="text" name="telefone" id="telefone" class="form-control" value="{{ form.telefone.value|default:"" }}">
               <span class="help-block">{{ form.telefone.errors }}</span>
             </div>
