Fixando altura de foto do perfil

--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -791,6 +791,7 @@ h4{font-size: 12px;}
         .no-imagem{
           border-radius: 50%;
           width: 160px;
+          height: 160px;
         }
         .no-qr{
           width: 130px;
