--- a/plataforma/templates/pages/nos_create_form.html
+++ b/plataforma/templates/pages/nos_create_form.html
@@ -67,7 +67,7 @@
               {% endif %}
             </div>
             <label>Upload da Imagem</label>
-            {% comment %}<p class="ex">Best Fit: 500px x 315px</p>{% endcomment %}
+            <p class="ex">Best Fit: 500px x 315px</p>
             <p class="ex">Tamanho máximo 2MB</p>
             <div class="form-group {% if form.imagem.errors %} has-error{% endif %}">
               <label for="id_imagem" class="file-upload btn btn-prospera btn-lg">Selecionar</label>
