Deixando imagem da navbar quadrada

--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -90,6 +90,7 @@ $gotham: 'gotham', sans-serif;
     .profile-imagem{
       position: relative;
       height: 40px;
+      width: 40px;
       border-radius: 50%;
     }
   }
