Fixando mais uma imagem

--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -458,6 +458,7 @@ h4{font-size: 12px;}
           .thumbnail{
             background-color: $azul;
             border: 0;
+            width: 370px;
             height: 380px;
             opacity: .8;
             img{
