Trocando texto para Link para o Zoom

--- a/plataforma/templates/pages/no_edit_form.html
+++ b/plataforma/templates/pages/no_edit_form.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="form-group{% if form.contato_zoom.errors %} has-error{% endif %}">
-              <label for="contato_zoom">Link para contato no Zoom</label>
+              <label for="contato_zoom">Link para o Zoom</label>
               <input type="text" name="contato_zoom" id="contato_zoom" class="form-control" value="{{ form.contato_zoom.value|default:"" }}">
               <span class="help-block">{{ form.contato_zoom.errors }}</span>
             </div>
