Trocando texto para Saldo PRSP

--- a/plataforma/templates/pages/partial_no_status.html
+++ b/plataforma/templates/pages/partial_no_status.html
@@ -2,7 +2,7 @@
   <thead>
     <tr>
       <th></th>
-      <th>Quanto ganhou<br> com a Prospera</th>
+      <th>Saldo em PRSP</th>
       {% comment %}
       <th>Quanto contribuiu<br> para o nós</th>
       <th>Quanto recebeu<br> como nós</th>
