Adicionando margin top na descrição de objetos

--- a/plataforma/templates/pages/object_detail.html
+++ b/plataforma/templates/pages/object_detail.html
@@ -31,7 +31,7 @@
       {% if objeto.descricao|length > 360 %}
       <p class="description text-justify">{{ objeto.descricao }}</p>
       {% else %}
-      <p style="column-width: inherit;max-width: 85%;margin: auto;">{{ objeto.descricao }}</p>
+      <p class="description" style="column-width: inherit;max-width: 90%;margin: auto;margin-top: 10px;">{{ objeto.descricao }}</p>
       {% endif %}
     </section>
 
