--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -695,6 +695,9 @@ h4{font-size: 12px;}
 
     // Objetos
     #object-detail{
+      .description{
+        margin-top: 10px;
+      }
       .descricao-content{
         margin: auto;
         padding-top: 80px;
