--- a/plataforma/templates/pages/object_create_form.html
+++ b/plataforma/templates/pages/object_create_form.html
@@ -68,13 +68,14 @@
               <span class="help-block">{{ form.imagem.errors }}</span>
             </div>
           </div>
-          <div class="col-xs-12">
+          <div class="col-xs-9">
             <button class="btn btn-prospera btn-lg" type="submit">{% if action %}{{action}}{% else %}Criar{% endif %}</button>
-
+            {% if action %}
+            <a href="{% url 'object_delete' object.nodos.slug object.slug %}" class="btn btn-prospera btn-lg" style="margin-left: 40px;">Excluir</a>
+            {% endif %}
           </div>
         </div>
       </form>
-      <a href="{% url "object_delete" object.nodos.slug object.slug %}"><button class="btn btn-prospera btn-lg">Excluir</button></a>
     </div>
   </section>
 </div>
