--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -739,6 +739,10 @@ h4{font-size: 12px;}
             text-decoration: none;
           }
 
+          .object-item{
+            margin-bottom: 18px;
+          }
+
           .objeto-imagem{
               width: 120px;
               height: 120px;
